Fixing typo and copying updated chinese text into the wireless visualizer

--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -357,6 +357,6 @@
     <string name="share">Aktie</string>
     <string name="file_prefetch_size">Bytes zum Speichern in Speicher bei der Wiedergabe von lokalen Dateien:</string>
     <string name="download">Download</string>
-    <string name="download_confimation">Diese Funktion erfordert die externe Erweiterung \"%s\". Möchten Sie es jetzt herunterladen?</string>
+    <string name="download_confirmation">Diese Funktion erfordert die externe Erweiterung \"%s\". Möchten Sie es jetzt herunterladen?</string>
 
 </resources>
