--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -357,6 +357,6 @@
     <string name="share">Поделиться</string>
     <string name="file_prefetch_size">Байты для хранения в памяти при воспроизведении локальных файлов:</string>
     <string name="download">Загрузка</string>
-    <string name="download_confimation">Для этой функции требуется внешнее расширение \"%s\". Вы хотите скачать его сейчас?</string>
+    <string name="download_confirmation">Для этой функции требуется внешнее расширение \"%s\". Вы хотите скачать его сейчас?</string>
 
 </resources>
