--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -371,6 +371,6 @@
     <string name="share">Share</string>
     <string name="file_prefetch_size">Bytes to store into memory when playing local files:</string>
     <string name="download">Download</string>
-    <string name="download_confimation">This feature requires the external extension \"%s\". Would you like to download it now?</string>
+    <string name="download_confirmation">This feature requires the external extension \"%s\". Would you like to download it now?</string>
 
 </resources>
