--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -367,5 +367,6 @@
     <string name="transmission_error">传输错误！</string>
     <string name="transmission_active">传输活动&#8230;</string>
     <string name="transmit">发送&#8230;</string>
+    <string name="transmission_inactive">传输无效</string>
 
 </resources>
