--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -363,5 +363,7 @@
     <string name="transmission_active">Übertragung aktiv&#8230;</string>
     <string name="transmit">Übertragen&#8230;</string>
     <string name="transmission_inactive">Übertragung inaktiv</string>
+    <string name="listen_online">Hören Sie online</string>
+    <string name="transmission_details">Übertragen bei: %1$s\\nShare code: %2$s (berühren, um zu kopieren)</string>
 
 </resources>
