--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -363,5 +363,7 @@
     <string name="transmission_active">Передача активна&#8230;</string>
     <string name="transmit">Передавать&#8230;</string>
     <string name="transmission_inactive">Передача неактивна</string>
+    <string name="listen_online">Слушайте онлайн</string>
+    <string name="transmission_details">Передача по адресу: %1$s\\nПоделиться кодом: %2$s (коснитесь, чтобы скопировать)</string>
 
 </resources>
