--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -364,6 +364,6 @@
     <string name="transmit">Übertragen&#8230;</string>
     <string name="transmission_inactive">Übertragung inaktiv</string>
     <string name="listen_online">Hören Sie online</string>
-    <string name="transmission_details">Übertragen bei: %1$s\\nShare code: %2$s (berühren, um zu kopieren)</string>
+    <string name="transmission_details">Übertragen bei: %1$s\\n\\nShare code: %2$s (berühren, um zu kopieren)</string>
 
 </resources>
