--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -364,6 +364,6 @@
     <string name="transmit">Transmettre&#8230;</string>
     <string name="transmission_inactive">Transmission inactive</string>
     <string name="listen_online">Écoutez en ligne</string>
-    <string name="transmission_details">Transmettant à : %1$s\\nCode de partage : %2$s (touchez pour copier)</string>
+    <string name="transmission_details">Transmettant à : %1$s\\n\\nCode de partage : %2$s (touchez pour copier)</string>
 
 </resources>
