--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -364,6 +364,6 @@
     <string name="transmit">Transmitir&#8230;</string>
     <string name="transmission_inactive">Transmissão inativa</string>
     <string name="listen_online">Ouça online</string>
-    <string name="transmission_details">Transmitindo em: %1$s\\nCódigo de compartilhamento: %2$s (toque para copiar)</string>
+    <string name="transmission_details">Transmitindo em: %1$s\\n\\nCódigo de compartilhamento: %2$s (toque para copiar)</string>
 
 </resources>
