--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -364,6 +364,9 @@
     <string name="transmit">Для передачі&#8230;</string>
     <string name="transmission_inactive">Передача неактивна</string>
     <string name="listen_online">Слухайте в Інтернеті</string>
-    <string name="transmission_details">Передача в: %1$s\\n\\nКод розділу: %2$s (торкніться до копіювання)</string>
+    <string name="transmission_details">Передача в: %1$s\\n\\nКод доступу: %2$s (торкніться, щоб поділитися)</string>
+    <string name="remote_list">Спільний список (FPlay)</string>
+    <string name="access_code">Код доступу</string>
+    <string name="invalid_access_code">Неправильний код доступу :(</string>
 
 </resources>
