--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -364,6 +364,9 @@
     <string name="transmit">Transmitir&#8230;</string>
     <string name="transmission_inactive">Transmissão inativa</string>
     <string name="listen_online">Ouça online</string>
-    <string name="transmission_details">Transmitindo em: %1$s\\n\\nCódigo de compartilhamento: %2$s (toque para copiar)</string>
+    <string name="transmission_details">Transmitindo em: %1$s\\n\\nCódigo de acesso: %2$s (toque para compartilhar)</string>
+    <string name="remote_list">Lista compartilhada (FPlay)</string>
+    <string name="access_code">Código de acesso</string>
+    <string name="invalid_access_code">Código de acesso inválido :(</string>
 
 </resources>
