--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -369,6 +369,9 @@
     <string name="transmit">发送&#8230;</string>
     <string name="transmission_inactive">传输无效</string>
     <string name="listen_online">在线收听</string>
-    <string name="transmission_details">传输：%1$s\n\n分享代码：%2$s（触摸即可复制）</string>
+    <string name="transmission_details">传输：%1$s\n\n访问代码：%2$s（触摸即可分享代码）</string>
+	<string name="remote_list">共享列表（FPlay）</string>
+	<string name="access_code">访问代码</string>
+	<string name="invalid_access_code">无效的访问代码 :(</string>
 
 </resources>
