Improving the share feature

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -355,6 +355,7 @@
     <string name="icy">Glacial</string>
     <string name="allow_lock_screen">Permitir que la aplicación se mantenga por encima de la pantalla de bloqueo</string>
     <string name="share">Compartir</string>
+    <string name="share_el">Compartir&#8230;</string>
     <string name="file_prefetch_size">Bytes para almacenar en memoria al reproducir archivos locales:</string>
     <string name="download">Descarga</string>
     <string name="download_confirmation">Esta función requiere la extensión externa \"%s\". Desea descargarlo ahora?</string>
