--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -355,6 +355,7 @@
     <string name="icy">Льодовий</string>
     <string name="allow_lock_screen">Дозволити додатку залишатися над екраном блокування</string>
     <string name="share">Поділитися</string>
+    <string name="share_el">Поділитися&#8230;</string>
     <string name="file_prefetch_size">Байтів для зберігання в пам\'яті під час відтворення локальних файлів:</string>
     <string name="download">Завантажити</string>
     <string name="download_confirmation">Для цієї функції потрібне зовнішнє розширення \"%s\". Хочете завантажити його зараз?</string>
