--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -355,6 +355,7 @@
     <string name="icy">Eisig</string>
     <string name="allow_lock_screen">Lassen Sie die App über dem Sperrbildschirm stehen</string>
     <string name="share">Aktie</string>
+    <string name="share_el">Aktie&#8230;</string>
     <string name="file_prefetch_size">Bytes zum Speichern in Speicher bei der Wiedergabe von lokalen Dateien:</string>
     <string name="download">Download</string>
     <string name="download_confirmation">Diese Funktion erfordert die externe Erweiterung \"%s\". Möchten Sie es jetzt herunterladen?</string>
