Due to a weird behavior in API 10..15, regarding SocketChannel and write(), temporarily, I have removed ServerRunnable from HttpStramReceiver, making MediaPlayer class connect directly to the original URL

--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -325,6 +325,7 @@
     <string name="all_kinds">Todos los tipos</string>
     <string name="listeners">Oyentes</string>
     <string name="connecting">Conectando&#8230;</string>
+    <string name="receiving">Recibiendo&#8230;</string>
     <string name="bytes_before_decoding">Bytes para descargar antes de comenzar a decodificar:</string>
     <string name="seconds_before_playback">Segundos para decodificar antes de iniciar la reproducción:</string>
     <string name="playback_buffer_length">Tamaño del buffer de reproducción (un valor grande trae más estabilidad, pero provoca un retraso al cambiar los efectos):</string>
