--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -325,6 +325,7 @@
     <string name="all_kinds">Alle Arten</string>
     <string name="listeners">Zuhörer</string>
     <string name="connecting">Connecting&#8230;</string>
+    <string name="receiving">Daten empfangen&#8230;</string>
     <string name="bytes_before_decoding">Starten Sie die Decodierung nach dem Download wie viele Bytes:</string>
     <string name="seconds_before_playback">Starten Sie die Wiedergabe nach der Decodierung wie viele Sekunden:</string>
     <string name="playback_buffer_length">Größe des Wiedergabepuffer (ein großer Wert bringt mehr Stabilität, sondern führt zu einer Verzögerung, wenn die Auswirkungen zu verändern):</string>
