--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -325,6 +325,7 @@
     <string name="all_kinds">Tout types</string>
     <string name="listeners">Auditeurs</string>
     <string name="connecting">Connexion&#8230;</string>
+    <string name="receiving">Réception&#8230;</string>
     <string name="bytes_before_decoding">Octets à télécharger avant de commencer à décoder :</string>
     <string name="seconds_before_playback">Secondes pour décoder avant de commencer la lecture :</string>
     <string name="playback_buffer_length">Taille du tampon de reproduction (une grande valeur apporte une plus grande stabilité, mais provoque un retard lors du changement des effets) :</string>
