--- a/res/values-ru/strings.xml
+++ b/res/values-ru/strings.xml
@@ -325,6 +325,7 @@
     <string name="all_kinds">Все типы</string>
     <string name="listeners">Слушатели</string>
     <string name="connecting">Подключение&#8230;</string>
+    <string name="receiving">Получение данных&#8230;</string>
     <string name="bytes_before_decoding">Начать, декодирование после загрузки сколько байт:</string>
     <string name="seconds_before_playback">Начать воспроизведение после декодирования сколько секунд:</string>
     <string name="playback_buffer_length">Размер буфера воспроизведения (большое значение приносит стабильность, но вызывает задержку при смене эффектов):</string>
