--- a/res/values-zh/strings.xml
+++ b/res/values-zh/strings.xml
@@ -329,7 +329,8 @@
 	<string name="radio_directory">在线电台目录</string>
 	<string name="all_kinds">所有类型</string>
 	<string name="listeners">耳机</string>
-	<string name="connecting">连接中&#8230;</string>
+    <string name="connecting">连接中&#8230;</string>
+    <string name="receiving">接收数据&#8230;</string>
 	<string name="bytes_before_decoding">开始解码前要下载的字节数：</string>
 	<string name="seconds_before_playback">开始播放前要解码的秒数：</string>
 	<string name="playback_buffer_length">播放缓冲区的大小（较大的值会更稳定性，但在更改效果时会导致延迟）：</string>
