--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -316,6 +316,7 @@
     <string name="follow_current_song">Suivez morceau en cours sur l\'écran principal</string>
     <string name="announce_current_song">Annoncer lorsque la morceau en cours change</string>
     <string name="place_title_at_the_bottom">Placez le titre au fond</string>
+    <string name="place_controls_at_the_bottom">Placez les contrôles au fond</string>
     <string name="headset_hook_1">Un clic sur le bouton de l\'écouteur :</string>
     <string name="headset_hook_2">Deux clics sur le bouton de l\'écouteur :</string>
     <string name="headset_hook_3">Trois clics sur le bouton de l\'écouteur :</string>
