--- a/res/values-uk/strings.xml
+++ b/res/values-uk/strings.xml
@@ -316,6 +316,7 @@
     <string name="follow_current_song">Дотримуйтесь поточну пісню на головному екрані</string>
     <string name="announce_current_song">Оголошувати зміни поточної пісні</string>
     <string name="place_title_at_the_bottom">Помістіть назва внизу</string>
+    <string name="place_controls_at_the_bottom">Помістіть елементи керування внизу</string>
     <string name="headset_hook_1">Одне клацання на кнопку гарнітури:</string>
     <string name="headset_hook_2">Два натискає на кнопку гарнітури:</string>
     <string name="headset_hook_3">Три натискає на кнопку гарнітури:</string>
