--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -330,6 +330,7 @@
     <string name="follow_current_song">Follow current song on main screen</string>
     <string name="announce_current_song">Announce when current song changes</string>
     <string name="place_title_at_the_bottom">Place the title at the bottom</string>
+    <string name="place_controls_at_the_bottom">Place the controls at the bottom</string>
     <string name="headset_hook_1">One click on the headset button:</string>
     <string name="headset_hook_2">Two clicks on the headset button:</string>
     <string name="headset_hook_3">Three clicks on the headset button:</string>
